--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@
   --color-tag-bg: #f1f1f1;
   --color-jump-button-bg: lightsteelblue;
   --corner-radius: 0.25em;
-  --box-shadow: -0.2em -0.2em 0.5em rgba(0, 0, 0, 0.2);
+  --box-shadow: 0.2em 0.2em 0.5em rgba(0, 0, 0, 0.2);
 }
 
 /* HTML elements */
